# malmo-challenge

./: README.md  setup.py
ai_challenge/pig_chase/: agent.py  common.py  evaluation.py  evolution.py  final_agent.json  mockenvironment.py  model.py  pig_chase.xml  pig_chase_eval_evolution.py  (+2 more)
cpp/: CMakeLists.txt  Malmo.sln  Malmo.vcxproj  Malmo.vcxproj.filters  pig_dist
cpp/src/: main.cpp
cpp/src/BackpropagationXor/: BackpropagationXorExample.cpp
cpp/src/PigChase/: AbstractMalmoAgent.cpp  AbstractMalmoAgent.hpp  Agent.cpp  Agent.hpp  AgentIO.hpp  AgentMutationAlgorithm.cpp  AgentMutationAlgorithm.hpp  ChallengeAgent.cpp  ChallengeAgent.hpp  Malmo.cpp  Malmo.hpp  MalmoCombiningStrategy.cpp  MalmoCombiningStrategy.hpp  MalmoFitnessFunction.cpp  MalmoFitnessFunction.hpp  MalmoTopDownController.cpp  MalmoTopDownController.hpp  MalmoTopDownWindow.cpp  MalmoTopDownWindow.hpp  MalmoTopDownWindowFactory.cpp  MalmoTopDownWindowFactory.hpp  Parasite.cpp  Parasite.hpp  PigChaseEvolution.cpp  PigChaseEvolution.hpp  TensorflowExporter.cpp  TensorflowExporter.hpp
cpp/src/PongEvolution/: Agent.cpp  Agent.hpp  AgentIO.hpp  AgentMutationAlgorithm.cpp  AgentMutationAlgorithm.hpp  MalmoCombiningStrategy.cpp  MalmoCombiningStrategy.hpp  MalmoEvolution.cpp  MalmoEvolution.hpp  MalmoFitnessFunction.cpp  MalmoFitnessFunction.hpp  MalmoHallOfFameAlgorithm.cpp  MalmoHallOfFameAlgorithm.hpp  Minecraft.cpp  Minecraft.hpp  MinecraftController.cpp  MinecraftController.hpp  MinecraftFactory.cpp  MinecraftFactory.hpp  MinecraftWindow.cpp  MinecraftWindow.hpp  TensorflowExporter.hpp
